whoami/whoami-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: whoami
  namespace: whoami
spec:
  serviceName: whoami
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest
          ports:
            - containerPort: 80
