whoami/whoami-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.albinmedoc.se`)
      kind: Rule
      services:
        - name: whoami
          port: 80
